# GhulbusBase

./: .codecov.yml  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-and-test-macos.yml  build-and-test-ubuntu.yml  build-and-test-windows.yml
cmake/: gbBaseConfig.cmake.in  gbBaseMacros.cmake.in
debug_visualizers/: ReadMe.txt  gbBase.natvis
doc/: Doxyfile.in  main_page.dox
include/gbBase/: Allocator.hpp  AnyInvocable.hpp  Assert.hpp  Exception.hpp  Finally.hpp  FixedRing.hpp  Log.hpp  LogHandlers.hpp  OverloadSet.hpp  PerfLog.hpp  RingPool.hpp  UnusedVariable.hpp  config.hpp
include/gbBase/Allocator/: AllocationStrategyMonotonic.hpp  AllocationStrategyPool.hpp  AllocationStrategyRing.hpp  AllocationStrategyStack.hpp  DebugPolicy.hpp  LinearMemoryResource.hpp  StatefulAllocator.hpp  Storage.hpp  StorageView.hpp
include/gbBase/Allocators/: DebugPolicy.hpp
src/: Assert.cpp  Exception.cpp  Log.cpp  LogHandlers.cpp
test/: MockDebugPolicy.hpp  MockStorage.hpp  TestAllocator.cpp  TestAllocatorAllocationStrategyMonotonic.cpp  TestAllocatorAllocationStrategyPool.cpp  TestAllocatorAllocationStrategyRing.cpp  TestAllocatorAllocationStrategyStack.cpp  TestAllocatorDebugPolicy.cpp  TestAllocatorLinearMemoryResource.cpp  TestAllocatorStatefulAllocator.cpp  TestAllocatorStorage.cpp  TestAllocatorStorageView.cpp  TestAnyInvocable.cpp  TestAssert.cpp  TestException.cpp  TestFinally.cpp  TestFixedRing.cpp  TestLog.cpp  TestLogHandlers.cpp  TestOverloadSet.cpp  TestPerfLog.cpp  TestRingPool.cpp
